[package]
name = "onion-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
warc = "0.4"

# Optimize all dependencies even in debug builds.
# Our code (gzip decompression, regex) spends 99% of CPU time inside
# dependency crates. Optimizing them gives release-like performance
# while keeping our own code in debug mode (fast compile, good errors).
[profile.dev.package."*"]
opt-level = 2
